# controllers/functions/api_requests.go
@@ -533,6 +533,46 @@ func AccountBalanceV2(c *beego.Controller, clientid string, accountNumber string
 	return data
 }
 
+func AccountStatementV2(c *beego.Controller, clientid string, accountNumber string, fromDate string, toDate string) (resp responses.AccountStatementApiResponse) {
+	host := HostMapping(clientid)
+
+	logs.Info("Sending client ID ", clientid)
+
+	request := api.NewRequest(
+		host,
+		"/api/"+clientid+"/account-statement/"+accountNumber,
+		api.POST)
+	request.Params["accountNumber"] = accountNumber
+	logs.Debug("Request to be sent is ", request)
+	client := api.Client{
+		Request: request,
+		Type_:   "params",
+	}
+	res, err := client.SendRequest()
+	if err != nil {
+		logs.Error("client.Error: %v", err)
+		c.Data["json"] = err.Error()
+	}
+	defer res.Body.Close()
+	read, err := io.ReadAll(res.Body)
+	if err != nil {
+		c.Data["json"] = err.Error()
+	}
+
+	var prettyJSON bytes.Buffer
+	if err := json.Indent(&prettyJSON, read, "", "  "); err != nil {
+		logs.Info("Raw response received is ", string(read))
+	} else {
+		logs.Info("Raw response received is \n", prettyJSON.String())
+	}
+	var data responses.AccountStatementApiResponse
+	// var data responses.NameInquiryResponse
+	json.Unmarshal(read, &data)
+	c.Data["json"] = data
+
+	return data
+}
+
 func GetContactInfo(clientid string) (resp interface{}) {
 	host := HostMapping(clientid)
 
